# libscriba

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  android_export.sh  company.c  db_backend.h  event.c  poc.c  project.c  scriba.c  scriba.fbs  scriba_generated.h  serializer.cpp  types.c
bindings/java/: org_scribacrm_libscriba_ScribaDB.c  org_scribacrm_libscriba_ScribaDB.h
bindings/java/org/scribacrm/libscriba/: Company.java  DataDescriptor.java  Event.java  POC.java  Project.java  ScribaDB.java
bindings/java/org/scribacrm/libscriba/test/: CompanyTest.java  DataArrayPartTest.java  EventTest.java  JavaBindingsSuite.java  POCTest.java  ProjectTest.java  SerializerTest.java  java_bindings_test.sh.in
include/: company.h  event.h  poc.h  project.h  scriba.h  serializer.h  types.h
sqlite-backend/: sqlite_backend.c  sqlite_backend.h
test/: common_test.c  common_test.h  frontend_test.c  frontend_test.h  main.c  mock_backend.c  mock_backend.h  serializer_test.c  serializer_test.h  sqlite_backend_test.c  sqlite_backend_test.h  test_db_generator.c
